# __neon__

./: .clang-format  .gitmodules  CMakeLists.txt  base.vert  main.cc  readme.md
core/: file_system.h  logging.h  string_utils.h
renderer/: buffer.cc  buffer.h  command_buffer.cc  command_buffer.h  command_pool.cc  command_pool.h  descriptor_pool.cc  descriptor_pool.h  descriptor_set.cc  descriptor_set.h  descriptor_set_layout.cc  descriptor_set_layout.h  device.cc  device.h  fence_pool.cc  fence_pool.h  forward_subpass.cc  forward_subpass.h  framebuffer.cc  framebuffer.h  geometry_subpass.cc  geometry_subpass.h  image.cc  image.h  image_view.cc  image_view.h  instance.cc  instance.h  ostream.cc  ostream.h  physical_device.cc  physical_device.h  pipeline.cc  pipeline.h  pipeline_layout.cc  pipeline_layout.h  pipeline_state.cc  pipeline_state.h  queue.cc  queue.h  (+26 more)
scene/: camera.h  material.h  mesh.h  scene.cc  scene.h  sub_mesh.cc  sub_mesh.h
